Day02-练习笔记/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: clusterip-service
            port:
              number: 80



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "abs.com"
    http:
      paths:
      - pathType: Prefix
        path: "/test02"
        backend:
          service:
            name: clusterip-service02
            port:
              number: 8000




apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: abs2.com
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: clusterip-service
            port:
              number: 80
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: clusterip-service02
            port:
              number: 8000
